--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </div>
 
       <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
+        <a href="https://github.com/FoodToGo/fiki/" class="mx-2">
           <i class="fab fa-github"></i>
         </a>
       </div>
