--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+              <img src="img/diana.jpg" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
               <div class="small text-black-50">4923 Market Street, Orlando FL</div>
