--- a/index.html
+++ b/index.html
@@ -139,11 +139,10 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <img src="img/diana.jpg" class="card-img-top" alt="...">
-              <h4 class="text-uppercase m-0">Address</h4>
+              <h4 class="text-uppercase m-0">Ungureanu Diana</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">diana.ungureanu2706@stud.acs.upb.ro</div>
             </div>
           </div>
         </div>
@@ -151,12 +150,10 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Email</h4>
+              <img src="img/gabi.jpg" class="card-img-top" alt="...">
+              <h4 class="text-uppercase m-0">Geanaliu Gabriela</h4>
               <hr class="my-4">
-              <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
-              </div>
+              <div class="small text-black-50">madalina.geanaliu@stud.acs.upb.ro</div>
             </div>
           </div>
         </div>
