--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <img src="img/gabi2.jpg" class="card-img-top" alt="...">
+              <img src="img/gabi2.PNG" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Geanaliu Gabriela</h4>
               <hr class="my-4">
               <div class="small text-black-50">madalina.geanaliu@stud.acs.upb.ro</div>
