--- a/index.html
+++ b/index.html
@@ -146,6 +146,17 @@
             </div>
           </div>
         </div>
+        
+        <div class="col-md-4 mb-3 mb-md-0">
+          <div class="card py-4 h-100">
+            <div class="card-body text-center">
+              <img src="img/cosmin_i.jpg" class="card-img-top" alt="...">
+              <h4 class="text-uppercase m-0">Icatoiu Cosmin</h4>
+              <hr class="my-4">
+              <div class="small text-black-50">cosmin.icatoiu@stud.acs.upb.ro</div>
+            </div>
+          </div>
+        </div>
 
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
@@ -157,28 +168,16 @@
             </div>
           </div>
         </div>
-
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
-            </div>
-          </div>
-        </div>
-      </div>
       
       <div class="row">
 
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
+              <img src="img/cosmin_t.jpg" class="card-img-top" alt="...">
+              <h4 class="text-uppercase m-0">Titiliuc Cosmin</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">cosmin.titiliuc@stud.acs.upb.ro</div>
             </div>
           </div>
         </div>
@@ -186,26 +185,14 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Email</h4>
+              <img src="img/gabi2.PNG" class="card-img-top" alt="...">
+              <h4 class="text-uppercase m-0">Fetoiu Catalin</h4>
               <hr class="my-4">
-              <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
-              </div>
+              <div class="small text-black-50">catalin.fetoiu@stud.acs.upb.ro</div>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
-            </div>
-          </div>
-        </div>
       </div>
 
       <div class="social d-flex justify-content-center">
