--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             <div class="card-body text-center">
               <img src="img/diana.jpg" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Ungureanu Diana</h4>
+              <h4 class="text-uppercase m-0">Back-End</h4>
               <hr class="my-4">
               <div class="small text-black-50">diana.ungureanu2706@stud.acs.upb.ro</div>
             </div>
@@ -152,6 +153,7 @@
             <div class="card-body text-center">
               <img src="img/cosmin_i.jpg" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Icatoiu Cosmin</h4>
+              <h4 class="text-uppercase m-0">Project Owner</h4>
               <hr class="my-4">
               <div class="small text-black-50">cosmin.icatoiu@stud.acs.upb.ro</div>
             </div>
@@ -163,6 +165,7 @@
             <div class="card-body text-center">
               <img src="img/gabi2.PNG" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Geanaliu Gabriela</h4>
+              <h4 class="text-uppercase m-0">Front-End</h4>
               <hr class="my-4">
               <div class="small text-black-50">madalina.geanaliu@stud.acs.upb.ro</div>
             </div>
@@ -176,6 +179,7 @@
             <div class="card-body text-center">
               <img src="img/cosmin_t.jpg" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Titiliuc Cosmin</h4>
+              <h4 class="text-uppercase m-0">Project Manager</h4>
               <hr class="my-4">
               <div class="small text-black-50">cosmin.titiliuc@stud.acs.upb.ro</div>
             </div>
@@ -187,6 +191,7 @@
             <div class="card-body text-center">
               <img src="img/gabi2.PNG" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Fetoiu Catalin</h4>
+              <h4 class="text-uppercase m-0">Fund Raising</h4>
               <hr class="my-4">
               <div class="small text-black-50">catalin.fetoiu@stud.acs.upb.ro</div>
             </div>
