--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <img src="img/cosmin_i.jpg" class="card-img-top" alt="...">
+              <img src="img/cosmin_i2.PNG" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Icatoiu Cosmin</h4>
               <h4 class="text-uppercase m-0">Project Owner</h4>
               <hr class="my-4">
@@ -177,7 +177,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <img src="img/cosmin_t.jpg" class="card-img-top" alt="...">
+              <img src="img/cosmin_t2.PNG" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Titiliuc Cosmin</h4>
               <h4 class="text-uppercase m-0">Project Manager</h4>
               <hr class="my-4">
