--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Solution</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <p class="mb-0 text-white-50">With the help of technology, sustainable eating can be more straightforward than it has ever been before. Instead of throwing surplus food, restaurants can sell it through FoodToGO. Consumers buy food from the app as a takeaway and get high quality food for a reduced price. The app allows you to browse unsold food from restaurants, cafes and supermarkets.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
