--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
-              <img src="img/catalin.jpg" class="card-img-top" alt="...">
+              <img src="img/catalin2.PNG" class="card-img-top" alt="...">
               <h4 class="text-uppercase m-0">Fetoiu Catalin</h4>
               <h4 class="text-uppercase m-0">Fund Raising</h4>
               <hr class="my-4">
