--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <img src="img/cosmin_t2.PNG" class="card-img-top" alt="...">
+              <hr class="my-4">
               <h4 class="text-uppercase m-0">Titiliuc Cosmin</h4>
               <h4 class="text-uppercase m-0">Project Manager</h4>
               <hr class="my-4">
