--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <img src="img/diana.jpg" class="card-img-top" alt="...">
+              <hr class="my-4">
               <h4 class="text-uppercase m-0">Ungureanu Diana</h4>
               <h4 class="text-uppercase m-0">Back-End</h4>
               <hr class="my-4">
@@ -120,6 +121,7 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <img src="img/cosmin_i2.PNG" class="card-img-top" alt="...">
+              <hr class="my-4">
               <h4 class="text-uppercase m-0">Icatoiu Cosmin</h4>
               <h4 class="text-uppercase m-0">Project Owner</h4>
               <hr class="my-4">
@@ -132,6 +134,7 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <img src="img/gabi2.PNG" class="card-img-top" alt="...">
+              <hr class="my-4">
               <h4 class="text-uppercase m-0">Geanaliu Gabriela</h4>
               <h4 class="text-uppercase m-0">Front-End</h4>
               <hr class="my-4">
@@ -165,6 +168,7 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <img src="img/catalin2.PNG" class="card-img-top" alt="...">
+              <hr class="my-4">
               <h4 class="text-uppercase m-0">Fetoiu Catalin</h4>
               <h4 class="text-uppercase m-0">Fund Raising</h4>
               <hr class="my-4">
