--- a/index.html
+++ b/index.html
@@ -94,6 +94,24 @@
           </div>
         </div>
       </div>
+      
+      <!-- Customer Segments Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">Mountains</h4>
+                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
   </section>
@@ -112,7 +130,7 @@
               <h4 class="text-uppercase m-0">Ungureanu Diana</h4>
               <h4 class="text-uppercase m-0">Back-End</h4>
               <hr class="my-4">
-              <div class="small text-black-50">diana.ungureanu2706@stud.acs.upb.ro</div>
+              <div class="small text-black-50">diana.ungureanu2706@gmail.com</div>
             </div>
           </div>
         </div>
@@ -125,7 +143,7 @@
               <h4 class="text-uppercase m-0">Icatoiu Cosmin</h4>
               <h4 class="text-uppercase m-0">Project Owner</h4>
               <hr class="my-4">
-              <div class="small text-black-50">cosmin.icatoiu@stud.acs.upb.ro</div>
+              <div class="small text-black-50">cosmin.icatoiu@gmail.com</div>
             </div>
           </div>
         </div>
@@ -138,7 +156,7 @@
               <h4 class="text-uppercase m-0">Geanaliu Gabriela</h4>
               <h4 class="text-uppercase m-0">Front-End</h4>
               <hr class="my-4">
-              <div class="small text-black-50">madalina.geanaliu@stud.acs.upb.ro</div>
+              <div class="small text-black-50">geanaliugabriela@gmail.com</div>
             </div>
           </div>
         </div>
@@ -155,7 +173,7 @@
               <h4 class="text-uppercase m-0">Titiliuc Cosmin</h4>
               <h4 class="text-uppercase m-0">Project Manager</h4>
               <hr class="my-4">
-              <div class="small text-black-50">cosmin.titiliuc@stud.acs.upb.ro</div>
+              <div class="small text-black-50">cosmin.titiliuc@gmail.com</div>
             </div>
           </div>
         </div>
@@ -172,7 +190,7 @@
               <h4 class="text-uppercase m-0">Fetoiu Catalin</h4>
               <h4 class="text-uppercase m-0">Fund Raising</h4>
               <hr class="my-4">
-              <div class="small text-black-50">catalin.fetoiu@stud.acs.upb.ro</div>
+              <div class="small text-black-50">fetoiucatalinemil@gmail.com</div>
             </div>
           </div>
         </div>
