--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">Customer Segments</h4>
+                <p class="mb-0 text-white-50">Our solution is aimed at every social category. It creates a bridge between restaurants and normal people and it is benefic for both parties.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
