--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <!-- Customer Segments Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/cutomer_segment.PNG" alt="">
+          <img class="img-fluid" src="img/customer_segment.PNG" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
