--- a/index.html
+++ b/index.html
@@ -112,6 +112,42 @@
           </div>
         </div>
       </div>
+      
+      <!-- Competition and Advantage over the competition Row -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/competition.PNG" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Competition</h4>
+                <p class="mb-0 text-white-50">This is a First on the Market solution in Romania as there is currently no software available which focuses on waste reduction on the current market.</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <!-- Metrics Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/customer_segment.PNG" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">Customer Segments</h4>
+                <p class="mb-0 text-white-50">Our solution is aimed at every social category. It creates a bridge between restaurants and normal people and it is benefic for both parties.</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
   </section>
