--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
       <!-- Metrics Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/customer_segment.PNG" alt="">
+          <img class="img-fluid" src="img/metrics.PNG" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Customer Segments</h4>
-                <p class="mb-0 text-white-50">Our solution is aimed at every social category. It creates a bridge between restaurants and normal people and it is benefic for both parties.</p>
+                <h4 class="text-white">Metrics</h4>
+                <p class="mb-0 text-white-50">  </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
