--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Metrics</h4>
-                <p class="mb-0 text-white-50">  </p>
+                <p class="mb-0 text-white-50">The functionality is often checked against the users feedback and improvements are made to meet their requirements. Also, before every release there are various sanity checks being made.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
