--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a class="nav-link js-scroll-trigger" href="#projectDescription">Project Description</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#customerDiscovery">Customer Discovery</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
@@ -151,7 +154,12 @@
 
     </div>
   </section>
-
+  <!-- Customer Discovery Section -->
+  <section id="customerDiscovery" class="cd-section bg-light">
+    <div class="container">
+      <p>Changing </p>
+    </div>
+  </section>
   <!-- Contact Section -->
   <section id="contact" class="contact-section bg-black">
     <div class="container">
