--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a class="nav-link js-scroll-trigger" href="#projectDescription">Project Description</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#wireframe">Wireframe</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#customerDiscovery">Customer Discovery</a>
           </li>
           <li class="nav-item">
@@ -159,7 +162,7 @@
   <section id="wireframe" class="cd-section bg-light">
     <div class="container">
       <h4>Application Wireframe</h4>
-      <p>Visit the following website <a href="https://xd.adobe.com/view/795eb70f-247b-462c-4818-5a6dab692724-0f6f/">FoodToGo Wireframe</a> to test our interactive application flow</p>
+      <p>Visit the following website <a href="https://xd.adobe.com/view/795eb70f-247b-462c-4818-5a6dab692724-0f6f/">FoodToGo Wireframe</a> to test our interactive application flow.</p>
       <img src="img/wireframe.png" class="card-img-top" alt="...">
       <br>
     </div>
