Add link to landing page

--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
             <a class="nav-link js-scroll-trigger" href="#projectDescription">Project Description</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#customerDiscovery">Customer Discovery</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#wireframe">Wireframe</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#customerDiscovery">Customer Discovery</a>
+            <a class="nav-link js-scroll-trigger" href="#landingPage">Landing Page</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -158,16 +161,6 @@
     </div>
   </section>
   
-  <!-- Wireframe Section -->
-  <section id="wireframe" class="cd-section bg-light">
-    <div class="container">
-      <h4>Application Wireframe</h4>
-      <p>Visit the following website <a href="https://xd.adobe.com/view/795eb70f-247b-462c-4818-5a6dab692724-0f6f/">FoodToGo Wireframe</a> to test our interactive application flow.</p>
-      <img src="img/wireframe.png" class="card-img-top" alt="...">
-      <br>
-    </div>
-  </section>
-  
   <!-- Customer Discovery Section -->
   <section id="customerDiscovery" class="cd-section bg-light">
     <div class="container">
@@ -187,6 +180,25 @@
       <p>We also asked how much they would be willing to pay for two meals (one costing 30 lei and one costing 80 lei). For the cheaper meal 59.6% would pay over half the price whereas for the more expensive one 52.3% would pay over half. Also, around 90% of the people would be willing to pay around 40% of the price for the meal. This is very important as it is the starting point of talk with the restaurants as well. In order for this application to work, a common ground needs to be met in terms of the price asked for the meals as this was the main problem in the first place.</p>
       <p>The last thing that the form revealed was that people are in general not willing to go and pick up the food but would rather have it delivered. This may be a potential drawback as we may have to focus in the first place on restaurants that have a delivery system in place, partner with a delivery company such as Glovo, Food Panda or Uber Eats or create a similar delivery system.</p>
       <p>The product is not yet ready for customer validation. The next step that needs to be done is to go and talk with the persons that represent the other side of the application, the restaurant owners. We have a pretty clear view about what customers expect from our application and we can use this information when proposing it to the restaurants. Unfortunately, this is a bit harder as none of us has any connections in this world and we are still waiting for some e-mail responses so that we can set some brief face to face discussions. We would like to check that our premises are correct in terms of the food that gets wasted and the money that it could generate. Not only that, but we need to check their expectations in terms of price. We also need to make a financial plan that would show how much we would be able to earn from this types of deals between the customers and the restaurant. This needs to be negotiated with the owners as well. Only after these steps are finished we would be able to move on to create a landing page and start working on the MVP.</p>
+    </div>
+  </section>
+  
+  <!-- Wireframe Section -->
+  <section id="wireframe" class="cd-section bg-light">
+    <div class="container">
+      <h4>Application Wireframe</h4>
+      <p>Visit the following website <a href="https://xd.adobe.com/view/795eb70f-247b-462c-4818-5a6dab692724-0f6f/">FoodToGo Wireframe</a> to test our interactive application flow.</p>
+      <img src="img/wireframe.png" class="card-img-top" alt="...">
+      <br>
+    </div>
+  </section>
+  
+  <!-- Landing Page Section -->
+  <section id="landingPage" class="cd-section bg-light">
+    <div class="container">
+      <h4>Application Landing Page</h4>
+      <p>Visit our <a href="https://foodtogo775166386.wordpress.com/">Landing Page</a> to tell us your opinion and win a promotional code.</p>
+      <br>
     </div>
   </section>
   
