User Persona, User Stories

--- a/index.html
+++ b/index.html
@@ -655,9 +655,38 @@
   </div>
   <br>
 
+<h4>User Persona</h4>
+<h5>Bio</h5>
+<p>Andrei</p>
+<p>24 years old</p>
+<p>Lives in Bucharest with a colleague from college
+<p>Employed, Earnings 1500 eur/month</p>
+
+
+<h5>Needs</h5>
+<p>He would like cheaper products for cooking</p>
+<p>He would like to get cheaper food from his favourite restaurant</p>
+<p>He likes to cook, but wants his food to be fresh and always cook just for one meal</p>
+
+
+<h5>Problems</h5>
+<p>He is a busy person</p>
+<p>He does not have always time for cooking or to go to restaurants</p>
+<p>He believes it is expensive to order food from restaurants</p>
+
+
+<h4>User stories</h4>
+<p>As a student I want to buy cheap and quality food</p>
+<p>As someone who works 8 hours a day I would like to manage my groceries on my way home</p>
+<p>As someone who cares about the planet I would like to eat meals from my favourite restaurant that would be otherwise just a waste</p>
+<p>As a non-corporate worker and arrive home tired I would like to enjoy a great dinner when I do not have time to cook</p>
+<p>As a low income person I would like to spend less on food</p>
+
     <br>
   </div>
 </section>
+
+
 
   <!-- Contact Section -->
   <section id="contact" class="contact-section bg-black">
