--- a/index.html
+++ b/index.html
@@ -675,14 +675,21 @@
 <p>He believes it is expensive to order food from restaurants</p>
 
 
+<br><br>
 <h4>User stories</h4>
 <p>As a student I want to buy cheap and quality food</p>
 <p>As someone who works 8 hours a day I would like to manage my groceries on my way home</p>
 <p>As someone who cares about the planet I would like to eat meals from my favourite restaurant that would be otherwise just a waste</p>
 <p>As a non-corporate worker and arrive home tired I would like to enjoy a great dinner when I do not have time to cook</p>
 <p>As a low income person I would like to spend less on food</p>
+<br>
 
-    <br>
+<h4>User Flow</h4>
+<img src="img/UserFlow.png" class="card-img-top" alt="...">
+<br>
+
+<h4>Wireframe update</h4>
+<p>Interviews revealed that users would also be interested in buying from supermarkets. This feature is not yet available, but it might be integrated in the future. An update of the wireframe would consist in creating two separate views for restaurants and supermarkets. This would mean creating a page similar with the page listing the restaurants, but for supermarkets. The rest of the actions would remain the same.</p> 
   </div>
 </section>
 
