--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <a class="nav-link js-scroll-trigger" href="#interviews">Interviews</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#leadGenerationCampaign">Lead Generation Campaign</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
@@ -693,7 +696,13 @@
   </div>
 </section>
 
+  <!-- Lead Generation Campaign Section -->
+  <section id="leadGenerationCampaign" class="cd-section bg-light">
+    <div class="container">
+      <h4>Lead Generation Campaign Section</h4>
 
+    </div>
+  </section>
 
   <!-- Contact Section -->
   <section id="contact" class="contact-section bg-black">
