--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
   <!-- Lead Generation Campaign Section -->
   <section id="leadGenerationCampaign" class="cd-section bg-light">
     <div class="container">
-      <h4>Lead Generation Campaign Section</h4>
+      <h4>Lead Generation Campaign</h4>
 
     </div>
   </section>
