--- a/index.html
+++ b/index.html
@@ -697,10 +697,38 @@
 </section>
 
   <!-- Lead Generation Campaign Section -->
+  <!-- Lead Generation Campaign Section -->
   <section id="leadGenerationCampaign" class="cd-section bg-light">
-    <div class="container">
-      <h4>Lead Generation Campaign</h4>
-
+    <div class="container" align="middle">
+		<h4>Lead Generation Campaign</h4>
+		<h5 align="middle">Subscription form</h5>
+		<p>To start our lead generation campaign we have added the below shown contact information form to our landing page to provide potential clients with the ability to subscribe to our platform.</p>
+		<img src="img/form.PNG">
+		<br><br>
+		<h5 align="middle">Results of subscription form</h5>
+		<p>Throughout our campaign we have obtained various subscriptions from users, which can be observed in the image below (personal information has been censored out).</p>
+		<img src="img/form_complet.PNG">
+		<br><br>
+		<h5 align="middle">Sharing the landing page</h5>
+		<p>We have shared our landing page using various platforms such as: Facebook, Whatsapp etc.</p>
+		<img src="img/dovada_1.PNG">
+		<img src="img/dovada_2.PNG">
+		<img src="img/dovada_3.PNG">
+		<img src="img/dovada_4.PNG">
+		<br><br>
+		<h5 align="middle">Results of campain</h5>
+		<p>To track the number of visitors which our campain brought to the landing page, we have used the Google Analytics plugin made available by WordPress. The tracking was done throughout a week and the results are as follows: </p>
+		<p> - The most number of views are from Romania</p>
+		<img src="img/Statistici_Tari.PNG">
+		<br><br>
+		<p> - The most popular day and hour was Sunday at 9:00 AM</p>
+		<img src="img/statistici_popularitate.PNG">
+		<br><br>
+		<p> - The vast majority of traffic came from Facebook which clearly states it was the best leading channel in our campaign</p>
+		<img src="img/Statistici_where_from.PNG">
+		<br><br>
+		<p> - As we do not have many clickable items on our landing page we were unable to create a click map </p>
+		<img src="img/Statistici_actual_clicks.PNG">
     </div>
   </section>
 
