--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
 		<br><br>
 		<h5 align="middle">Results of subscription form</h5>
 		<p>Throughout our campaign we have obtained various subscriptions from users, which can be observed in the image below (personal information has been censored out).</p>
-		<img src="img/form_complet.PNG">
+		<img src="img/form_complet.png">
 		<br><br>
 		<h5 align="middle">Sharing the landing page</h5>
 		<p>We have shared our landing page using various platforms such as: Facebook, Whatsapp etc.</p>
@@ -729,6 +729,7 @@
 		<br><br>
 		<p> - As we do not have many clickable items on our landing page we were unable to create a click map </p>
 		<img src="img/Statistici_actual_clicks.PNG">
+	    	<br><br>
     </div>
   </section>
 
