--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
 		<br><br>
 		<h5 align="middle">Results of subscription form</h5>
 		<p>Throughout our campaign we have obtained various subscriptions from users, which can be observed in the image below (personal information has been censored out).</p>
-		<img src="img/form_complet.png">
+		<img src="img/form_complet.PNG">
 		<br><br>
 		<h5 align="middle">Sharing the landing page</h5>
 		<p>We have shared our landing page using various platforms such as: Facebook, Whatsapp etc.</p>
@@ -716,6 +716,17 @@
 		<img src="img/dovada_3.PNG">
 		<img src="img/dovada_4.PNG">
 		<br><br>
+		<h5 align="middle">Permalinks of posts</h5>
+		<p><a href="https://www.facebook.com/groups/admiterease2019/permalink/1196029384118229/?app=fbl">https://www.facebook.com/groups/admiterease2019/permalink/1196029384118229/?app=fbl</a></p>
+		<p><a href="https://www.facebook.com/groups/960922467632863/permalink/1068898253501950/?app=fbl">https://www.facebook.com/groups/960922467632863/permalink/1068898253501950/?app=fbl</a></p>
+		<p><a href="https://www.facebook.com/groups/1610395932581784/permalink/2477356855885683/">https://www.facebook.com/groups/1610395932581784/permalink/2477356855885683/</a></p>
+		<p><a href="https://www.facebook.com/groups/462466777864328/permalink/545687329542272/">https://www.facebook.com/groups/462466777864328/permalink/545687329542272/</a></p>
+		<p><a href="https://www.facebook.com/groups/2420759301529842/permalink/2468645943407844/">https://www.facebook.com/groups/2420759301529842/permalink/2468645943407844/</a></p>
+		<p><a href="https://www.facebook.com/groups/272952510010391/permalink/467475557224751/">https://www.facebook.com/groups/272952510010391/permalink/467475557224751/</a></p>
+		<p><a href="https://www.facebook.com/groups/2844133938950815/">https://www.facebook.com/groups/2844133938950815/</a></p>
+		<p><a href="https://www.facebook.com/groups/eap.2014.2015/permalink/2511369755609333/">https://www.facebook.com/groups/eap.2014.2015/permalink/2511369755609333/</a></p>
+		<p><a href="https://www.facebook.com/groups/536719793157874/permalink/1436500766513101/">https://www.facebook.com/groups/536719793157874/permalink/1436500766513101/</a></p>
+		<p><a href="https://m.facebook.com/groups/558424267564072?view=permalink&id=3205777122828760">https://m.facebook.com/groups/558424267564072?view=permalink&id=3205777122828760</a></p>
 		<h5 align="middle">Results of campain</h5>
 		<p>To track the number of visitors which our campain brought to the landing page, we have used the Google Analytics plugin made available by WordPress. The tracking was done throughout a week and the results are as follows: </p>
 		<p> - The most number of views are from Romania</p>
@@ -729,7 +740,6 @@
 		<br><br>
 		<p> - As we do not have many clickable items on our landing page we were unable to create a click map </p>
 		<img src="img/Statistici_actual_clicks.PNG">
-	    	<br><br>
     </div>
   </section>
 
