Add Market Research section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#leadGenerationCampaign">Lead Generation Campaign</a>
           </li>
+	  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#marketResearch">Market Research</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
@@ -741,6 +744,33 @@
 		<p> - As we do not have many clickable items on our landing page we were unable to create a click map </p>
 		<img src="img/Statistici_actual_clicks.PNG">
 	    	<br><br>
+    </div>
+  </section>
+	
+  <!-- MarketResearch Section -->
+  <section id="marketResearch" class="cd-section bg-light">
+    <div class="container">
+      <h4>MarketResearch</h4>
+      <p><b>Size of the target market</b></p>
+      <p>By taking into account the results from our customer discovery process, during which we focused our search and spreading of our online form to two main categories, students and corporate workers with age in the range 23-35 (due to the fact that they will be more likely to use our application based on socioeconomic status and usage of technology), we can generalize and assume that our target market will consist of approximately 64.2% of those categories.</p>
+      <p>Our initials plans are centered around launching the product in Bucharest, for which the statistics are as follows: around 140.000 students each year and around 160.000 young corporate workers. Thus we estimate the total market size to be around 192.600, with the size of the sub-markets equal respectively to 89.880 for students and 102.720 for corporate workers.</p>
+      <p>Currently, we haven’t reached out in a systematic fashion to restaurants in Bucharest and we cannot determine the precise market size for them at this moment.</p>
+	    
+      <p><b>Competitors</b></p>	    
+      <p>At this moment the most popular applications for online food delivery are FoodPanda, Glovo, Uber Eats and Takeaway, all of which currently do not offer the service of delivering food prepared at a previous time in the day, which our product proposes. Although they do not offer this option, considering those companies already have well-defined networks of delivery, a solution can also be implemented in a relatively short amount of time, which could be to our disadvantage.</p>
+      <p>We have also discovered a startup with a similar goal to ours, named Tummy, which aims to also reduce food waste by creating the possibility of ordering food prepared previously on the same day. The company is still in its early stages, being founded one year ago, but nonetheless, it has this advantage compared to our product. In conclusion, there are currently 5 important competitors in our target market.</p>
+      <p>FoodPanda, Glovo, Uber Eats and Takeaway all share similar features regarding their applications and delivery process, giving the opportunity to select the restaurant and food from a list created based on criteria such as location, price and others. The food is then delivered by the restaurant or by the internal delivery partners of the company, allowing both online and cash payment. We expect that after our product will gain a large pool of users, those companies will also enter the competition by implementing similar functionalities in their apps. Regarding the Tummy startup, we discovered that it does not support delivery at home, customers being required to pick up the food by themselves. We consider this an advantage which will allow our product to gain market share after launch by also offering home delivery for the food.</p>
+	    
+      <p><b>Estimated market share and market value</b></p>	    
+      <p>In order to approximate the total market value, we considered that the value of the commission for FoodPanda and Uber Eats is around 20-30% per order, thus we considered an average commission of 25% per order. Assuming that each person in the target market will order food through our app 2 times a week (104 times a year) and with an average value of 40 lei (considering the responses in our customer discovery part), we obtain a total market value of 200.304.000 lei or 41.905.000 euro per year.</p>
+      <p>We plan that during the first year after launch we will get a market share of around 60%, our main competitor being Tummy, which we plan to overcome using features and partner restaurants that are not available in their platform. Considering that starting from year 2 we expect FoodPanda, Glovo, Uber Eats and Takeaway to also introduce our functionality due to increasing demand, we estimate that the market share will become around 50% for FoodToGo and the rest of 50% being shared equally between the competitors. We plan to remain at the 50% share during years 2, 3, 4 and 5 by making use of our advantage of being one of the first platforms to provide this service.</p>
+      <p>By taking into account the growing number of students and corporate workers and also the possibility of expansion in other cities in Romania (for example Cluj, Iasi or Timisoara), we estimate that the total market value will increase with at least 10.000.000 euro each year. Considering the previous arguments, the estimated predictions for total market share, FoodToGo’s market share and value of market share are as follows:</p>
+      <p>Year   Total Market Value    Market Share    Value of Market Share</p>
+      <p>1	41.905.000 euro		60%			25.143.000 euro</p>
+      <p>2	51.905.000 euro		50%			25.952.000 euro</p>
+      <p>3	61.905.000 euro		50%			30.952.000 euro</p>
+      <p>4	71.905.000 euro		50%			35.952.000 euro</p>
+      <p>5	81.905.000 euro		50%			40.952.000 euro</p>
     </div>
   </section>
 
