Change p to pre for table

--- a/index.html
+++ b/index.html
@@ -765,12 +765,12 @@
       <p>In order to approximate the total market value, we considered that the value of the commission for FoodPanda and Uber Eats is around 20-30% per order, thus we considered an average commission of 25% per order. Assuming that each person in the target market will order food through our app 2 times a week (104 times a year) and with an average value of 40 lei (considering the responses in our customer discovery part), we obtain a total market value of 200.304.000 lei or 41.905.000 euro per year.</p>
       <p>We plan that during the first year after launch we will get a market share of around 60%, our main competitor being Tummy, which we plan to overcome using features and partner restaurants that are not available in their platform. Considering that starting from year 2 we expect FoodPanda, Glovo, Uber Eats and Takeaway to also introduce our functionality due to increasing demand, we estimate that the market share will become around 50% for FoodToGo and the rest of 50% being shared equally between the competitors. We plan to remain at the 50% share during years 2, 3, 4 and 5 by making use of our advantage of being one of the first platforms to provide this service.</p>
       <p>By taking into account the growing number of students and corporate workers and also the possibility of expansion in other cities in Romania (for example Cluj, Iasi or Timisoara), we estimate that the total market value will increase with at least 10.000.000 euro each year. Considering the previous arguments, the estimated predictions for total market share, FoodToGo’s market share and value of market share are as follows:</p>
-      <p>Year     Total Market Value      Market Share         Value of Market Share</p>
-      <p>  1	   41.905.000 euro		60%		 25.143.000 euro</p>
-      <p>  2	   51.905.000 euro		50%		 25.952.000 euro</p>
-      <p>  3	   61.905.000 euro		50%		 30.952.000 euro</p>
-      <p>  4	   71.905.000 euro		50%		 35.952.000 euro</p>
-      <p>  5	   81.905.000 euro		50%		 40.952.000 euro</p>
+      <pre>Year     Total Market Value      Market Share         Value of Market Share</pre>
+      <pre>  1	      41.905.000 euro		60%		 25.143.000 euro</pre>
+      <pre>  2	      51.905.000 euro		50%		 25.952.000 euro</pre>
+      <pre>  3	      61.905.000 euro		50%		 30.952.000 euro</pre>
+      <pre>  4	      71.905.000 euro		50%		 35.952.000 euro</pre>
+      <pre>  5	      81.905.000 euro		50%		 40.952.000 euro</pre>
     </div>
   </section>
 
